--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,11 @@
             <artifactId>extentreports</artifactId>
             <version>3.1.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.5.0-b01</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
